apps/lucebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lucebox-dflash-api
  namespace: lucebox
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: lucebox-dflash
  ports:
    - name: http
      port: 8001
      protocol: TCP
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: lucebox-megakernel
  namespace: lucebox
spec:
  clusterIP: None
  selector:
    app: lucebox-megakernel
